Ajout du Copyright (pied de page)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 			</button>
                    	</span>
 		    </div>
-		    <div class="mastfoot"></div>
+		    <div class="mastfoot">
+			<p>©2014 H4204 - IF Insa</p>
+		    </div>
 		</div>
 	    </div>
 	</div>
