--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <script src="src/controller/SearchController.js"></script>
                 <button type="submit" ng-click="callRequest()" class="btn btn-default">Submit</button>
         </div>
-
+{{dbpedia}}
             <!--JQuery
             <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
             <script src="https://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
