essaie d'ajout cover.css sur master

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 			</button>
                    	</span>
 		    </div>
-		    <div class="mastfoot"></div>
-		</div>
+            
+		    <div class="mastfoot">
+            </div>
+		</div>        
 	    </div>
 	</div>
 
