--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         			       <span class="glyphicon glyphicon-search"></span>
         			    </button>
                     </span>
-    		    </div>
+    		    </div>{{temporaire}}
     <!--             <div ng-repeat="document in documents"/>
                     <h3>{{document.title}}<small>{{document.link}}</small></h3>
                     <p> {{document.snippet}}</p>
